changed folder structure

--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="signp.css">
+    <link rel="stylesheet" href="/css/signp.css">
          </head>
          <body>
           <div class="container">
@@ -85,7 +85,7 @@
 
                     <!--Connect Javascript-->
          <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-         <script src="signup.js"></script>
+         <script src="js/signup.js"></script>
   
         </body>
 </html>
