--- a/Login.html
+++ b/Login.html
@@ -7,7 +7,7 @@
     <title>Document</title>
      
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="Login.css">
+    <link rel="stylesheet" href="css/Login.css">
 
  </head>
 
@@ -175,7 +175,7 @@
         }
     </script>
 
- <script src="login.js"></script>
+ <script src="js/login.js"></script>
  
 </body>
 </html>
