--- a/course.html
+++ b/course.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course</title>
-    <link rel="stylesheet" href="course.css">
+    <link rel="stylesheet" href="css/course.css">
 </head>
 <body>
     <div>
