--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <title>Document</title>
 
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-         <link rel="stylesheet" href="index.css">
+         <link rel="stylesheet" href="/css/index.css">
        
          </head>
 
@@ -69,7 +69,7 @@
          </div>
          <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
          <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-         <script src="script.js"></script>
+         <script src="js/script.js"></script>
   
          </body>
 
